[package]
name = "white_noise"
version = "0.1.0"
authors = ["RJ Regenold <rjregenold@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
portaudio = { path = "./lib/rust-portaudio" }

[dependencies]
portaudio = "0.7.1"
fastrand = "1.4.0"
either = "1.6.1"
rppal = "0.11.3"